RarItem can be toString-ed properly. Remove CommunicationThread, introduce InboundCommunicationThread + many related stuff. Create EventActivity base class to properly init events. (Might not be needed later)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_comm_test">Communication test</string>
     <string name="title_activity_timing_test">TimingTestActivity</string>
+    <string name="title_activity_camera_preview">CameraPreviewActivity</string>
 
 </resources>
