CameraHelper can record video (only once per instance -> TODO allow for multiple times). CameraPreviewActivity: Take 5 photos as fast as possible, then save them on button press. New activity to record video.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_comm_test">Communication test</string>
     <string name="title_activity_timing_test">TimingTestActivity</string>
     <string name="title_activity_camera_preview">CameraPreviewActivity</string>
+    <string name="title_activity_led">LedActivity</string>
 
 </resources>
